# hoverpane

./: .gitignore  Cargo.toml  hoverpane.dmg  justfile  landing.md
api/: Cargo.toml
api/src/: main.rs
astro-landingpage/: package-lock.json  package.json
astro-landingpage/public/: 98_widget.html  example1.webm
astro-landingpage/src/: utils.ts
astro-landingpage/src/landingpage/: Desktop.tsx  LandingPage.tsx  constants.tsx  index.css
astro-landingpage/src/landingpage/components/: Dock.tsx  FloatingWidget.tsx
astro-landingpage/src/pages/: cancel.astro  index.astro  success.astro
astro-landingpage/src/styles/: global.css
desktop-app/: Cargo.toml
desktop-app/src/: main.rs
element-extractor/: Cargo.toml
element-extractor/src/: lib.rs
extension/: background.js  content.js  manifest.json  popup.html  popup.js
hoverpane/: Cargo.toml  justfile
hoverpane-app/: Cargo.toml  justfile  todo.md
hoverpane-app/assets/: pokemon_transparent.html  temperature_transparent.html  water_timer_transparent.html
hoverpane-app/build_assets/: Info-basic.plist  Info.plist  entitlements.plist
hoverpane-app/src/: event_sender.rs  main.rs  updater.rs
hoverpane/assets/: context_menu.js
hoverpane/build_assets/: icons.icns
hoverpane/src/: main.rs  thoughts.md
landingpage/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
landingpage/public/: interactive-widget.webm  todo.html  tools-demo.webm
landingpage/src/: App.tsx  Desktop.tsx  LandingPage.tsx  Purchase.tsx  constants.tsx  index.css  styles.css
landingpage/src/components/: Dock.tsx  DockIcons.tsx  FloatingWidget.tsx
mcp-server/: Cargo.toml
mcp-server/src/: counter.rs  lib.rs  main.rs
migrations/: 20240318000000_initial.sql  20240325000000_initial.sql
react-ui/: package-lock.json  package.json  todo_may21.md
react-ui/src/: App.tsx  AutoForm.tsx  Checkout.tsx  CreateWidgetForm.tsx  DataWidget.tsx  EditWidgets.tsx  EditorWidget.tsx  FormWidget.tsx  SettingsWidget.tsx  SimpleCreateWidget.tsx  Toast.tsx  clientInterface.tsx  constants.tsx  edit.tsx  form.tsx  index.css  schema.ts  types.ts  utils.tsx
src/: api.rs  db.rs  main.rs
test-dioxus-ui/: Cargo.toml
test-dioxus-ui/src/: main.rs
test-ui/: Cargo.toml
test-ui/assets/: NewWidgetForm.html  controls.html  element_view.html  find_element.js  init_script.js  new_view.html  simple_viewer.html
test-ui/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
ui/: package-lock.json
widget-db/: .env  Cargo.toml  widgets.db  widgets.db-shm  widgets.db-wal
widget-db/migrations/: 20240318000000_initial.sql
widget-db/src/: api.rs  db.rs  db_impl.rs  deserializer.rs  lib.rs  main.rs
widget-maker/: .env  Cargo.toml  justfile  todo.md  widget-maker.dmg  widgets.db
widget-maker/.sqlx/: query-04101c49d1c71051b84a0455c02b8fa9325a9adc4ac2457db369cb7ce9ffe463.json  query-04eec71b9701433283ed381f83b2cde64c7d3a5fa7fe5ac076bcada329f31a42.json  query-08c26ef7ee8cd556098a873270e40d083fc304a6d7b5c6048f9973f6f1cedd1c.json  query-2c14ad838e891e6b2c3cc362af73677c553a4d7ba58067c847025913be388e08.json  query-4109f8ccfe50cf2d1f5123c18dd867811afc1ff7474b16fbf03fb2ded3c0cf2b.json  query-44b7eec1b51080c1dccc48471faeea0ff4fa55a275e3a3cbd24af0297f31f1ee.json  query-79d2800cb2b0399cb86a7fbde1d25e1b5d89e9233e0b3a0f07bfdbac7ae700ae.json  query-7cd1141325a628a1373f16f007aa1f6c582a023a4148f021a87b84c4bdc24db6.json  query-9077c47e03679721fa3591b1aa9674a9ded2762c877532374659ce4081fa9adb.json  query-e027449f49b7bd728bdbd1c16456a85cc0b62556573785f446d965df5ce8cab5.json
widget-maker/assets/: context_test.html  element_view.html  index.html  simple_viewer.html  widget_template.html  widget_transparent.html
widget-maker/build_assets/: Info.plist  WidgetMaker.icns
widget-maker/migrations/: 20240318000000_initial.sql
widget-maker/src/: api.rs  db.rs  event_sender.rs  main.rs  value_prop.md
widget-maker/widget-maker.app/Contents/: Info.plist
widget-types/: Cargo.toml
widget-types/src/: event.rs  lib.rs
widget-util/: Cargo.toml  product_config.json
widget-util/src/: main.rs  polar.rs
