[workspace]
members = [
    "widget-maker",
    "widget-db", "types",
]

# [workspace.dependencies]
# tokio = { version = "1.44.1", features = ["full"] }
# sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "macros"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# log = "0.4"
# thiserror = "2.0.12" 