[workspace]
resolver = "2"
members = [
    "hoverpane-app",
    "widget-db",
    "widget-types",
    "widget-util"
]


[workspace.dependencies]
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
nanoid = "0.4"
axum = "0.7"
