[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12.13", features = ["blocking"] }
scraper = "0.23.1"
