[package]
name = "mcp-server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
anyhow = "1.0.98"
axum.workspace = true
# rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
rmcp = { version = "0.1", features = ["server", "transport-sse-server", "transport-io"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
