[package]
name = "test-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
wry = { version = "0.50.4", features = ["protocol"] }
winit = "0.30.9"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
once_cell = "1.19"
jiff = { version = "0.2.4", features = ["serde"] }
