[package]
name = "widget-db"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
jiff = { version = "0.2.4", features = ["serde"] }
nanoid = { path = "../../nanoid" }
tokio = { version = "1.44.1", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
http = "1.3.1"
axum-extra = "0.10.1"
thiserror = "2.0.12"
directories = "6.0.0"
futures = "0.3.31"
widget-types = { path = "../widget-types" }
dotenvy = "0.15.7"
rusqlite = { version = "0.32.0", features = ["bundled"] }
rusqlite_migration = "1.3.1"
async-trait = "0.1.88"

