[package]
name = "widget-util"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive", "serde_derive"] }
serde_json.workspace = true
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive"] }
